fix: x% match labels do not align with project titles in sponsor cards

--- a/containers/PageHome/containers/ProjectCarousel/components/ProjectCard/index.module.scss
+++ b/containers/PageHome/containers/ProjectCarousel/components/ProjectCard/index.module.scss
@@ -96,7 +96,15 @@
   background-color: #fff;
   border-radius: 65px;
   padding: 8px 12px;
-  top: 32px;
-  left: 56px;
+
+  &.normal {
+    left: 56px;
+    top: 32px;
+  }
+  &.narrow {
+    left: 32px;
+    top: 16px;
+  }
+
   z-index: 1;
 }
